# fundus-classification

./: .gitignore  main.py  pyproject.toml
data/meta/: data_filt.xlsx  labels_brset_filt.xlsx
notebooks/: colab_runner.ipynb
src/retino/: config.py  losses.py  utils.py
src/retino/data/: dataset.py  loader.py  split.py  transform.py
src/retino/evaluation/: metrics.py
src/retino/models/: classifier.py
src/retino/training/: trainer.py
tests/: test_dataset.py  test_loader.py  test_split.py
