[project]
name = "fundus-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "albumentations>=2.0.8",
  "matplotlib>=3.10.9",
  "numpy>=2.4.6",
  "opencv-python-headless>=4.13.0.92",
  "openpyxl>=3.1.5",
  "pandas>=3.0.3",
  "pillow>=12.2.0",
  "scikit-learn>=1.8.0",
  "seaborn>=0.13.2",
  "timm>=1.0.27",
  "torch>=2.12.0",
  "torchvision>=0.27.0",
  "tqdm>=4.67.3",
]

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.15.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retina"]
